add update and delete, make all operations atomic