@@ -1,7 +1,7 @@
 package com.miro.widrest.controller;
 
 import com.miro.widrest.domain.DbWidget;
-import com.miro.widrest.domain.impl.ConstantIdentifiable;
+import com.miro.widrest.domain.impl.ImmutableIdentifier;
 import com.miro.widrest.domain.impl.ImmutableWidget;
 import com.miro.widrest.service.WidgetService;
 import com.miro.widrest.validation.WidgetValidation;
@@ -10,27 +10,30 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 public final class WidgetController {
 
     private final WidgetService widgetService;
 
-    private final WidgetValidation validation;
+    private final Map<WidgetValidation.Type, WidgetValidation> validation;
 
     @Autowired
-    public WidgetController(final WidgetService widgetService, final WidgetValidation validation) {
+    public WidgetController(
+            final WidgetService widgetService,
+            final Map<WidgetValidation.Type, WidgetValidation> validation
+    ) {
         this.widgetService = widgetService;
         this.validation = validation;
     }
 
     @GetMapping("/widgets/{id}")
     public ResponseEntity<? extends DbWidget> get(@PathVariable("id") final long id) {
-        final DbWidget dbWidget = this.widgetService.get(new ConstantIdentifiable(id));
+        final DbWidget dbWidget = this.widgetService.get(new ImmutableIdentifier(id));
         if (dbWidget == DbWidget.empty) {
-            return ResponseEntity.noContent().build();
+            return ResponseEntity.notFound().build();
         } else {
             return ResponseEntity.ok(dbWidget);
         }
@@ -47,18 +50,59 @@ public final class WidgetController {
         }
     }
 
+    @PutMapping("/widgets/{id}")
+    public ResponseEntity<Object> update(
+            @RequestBody final ImmutableWidget widget,
+            @PathVariable("id") final long id) {
+        try {
+            final DbWidget updated = this.widgetService.update(new ImmutableIdentifier(id), widget);
+            if (updated == DbWidget.empty) {
+                return ResponseEntity.notFound().build();
+            } else {
+                return ResponseEntity.ok(updated);
+            }
+        } catch (final IllegalArgumentException exc) {
+            return ResponseEntity.badRequest()
+                    .body(
+                            Map.of(
+                                    "description",
+                                    this.validation.get(WidgetValidation.Type.UPDATE).failReason(),
+                                    "reason",
+                                    exc.getMessage()
+                            )
+                    );
+        }
+    }
+
     @PostMapping("/widgets")
     public ResponseEntity<Object> create(@RequestBody final ImmutableWidget widget) {
         try {
             return
                     ResponseEntity.ok(
                             this.widgetService.create(
-                                    this.validation.validate(widget)
+                                    this.validation.get(WidgetValidation.Type.INSERT).validate(widget)
                             )
                     );
-        } catch (IllegalStateException exc) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("reason", this.validation.failReason()));
+        } catch (final IllegalArgumentException exc) {
+            return ResponseEntity.badRequest()
+                    .body(
+                            Map.of(
+                                    "description",
+                                    this.validation.get(WidgetValidation.Type.INSERT).failReason(),
+                                    "reason",
+                                    exc.getMessage()
+                            )
+                    );
         }
     }
 
+    @DeleteMapping("/widgets/{id}")
+    public ResponseEntity<Object> delete(@PathVariable("id") final long id) {
+        final DbWidget deleted = this.widgetService.delete(new ImmutableIdentifier(id));
+        if (deleted == DbWidget.empty) {
+            return ResponseEntity.notFound().build();
+        } else {
+            return ResponseEntity.noContent().build();
+        }
+    }
 }
